Add JavaDocs, refactor extract string constants, rename a class