@@ -7,7 +7,7 @@ import rsp.page.EventContext;
 import rsp.page.RenderContextFactory;
 import rsp.page.events.GenericTaskEvent;
 import rsp.page.events.RemoteCommand;
-import rsp.page.events.SessionEvent;
+import rsp.page.events.Command;
 import rsp.ref.Ref;
 
 import java.util.*;
@@ -17,13 +17,12 @@ import static java.lang.System.Logger.Level.*;
 
 /**
  * Represents a stateful component which is a part of a UI components tree.
- * Components may contain one or more HTML tags and/or other components.
- * Every component is associated with a state snapshot, which is set during initialization and can be updated independently as a result of a user's action on this browser's page or events
- * like timers or services callbacks.
- * A change in a component's state results in re-rendering of the relevant component and all its child components.
- * A key-value context is provided to its child components, which can be used to share information from parent components to its children.
- * Every component has its DOM fragment view, which may contain conditional rendering logic and event handlers.
- * A simpler view is a pure function from an input state to a DOM tree definition.
+ * Components may contain one or more tags starting HTML DOM subtrees and/or other components.
+ * Every component is associated with a state object, managed by the framework.
+ * A component's state is set during initialization and can be updated independently as a result of a user's action on this browser's page
+ * or events like timers or services callbacks.
+ * A change of a component's state results in re-rendering of that component DOM subtree and the subcomponents.
+ * A key-value context is propagated to its child components. This context object can be used to pass information from parent components to its children.
  * All methods of this class must be called from its page's event loop thread.
  *
  * @param <S> a type for this component's state snapshot
@@ -32,9 +31,9 @@ public class Component<S> implements Segment, StateUpdate<S> {
     private final System.Logger logger = System.getLogger(getClass().getName());
 
     protected final ComponentCompositeKey componentId;
-    protected final ComponentContext componentContext;
-    protected final Consumer<SessionEvent> commandsEnqueue;
+    protected final Consumer<Command> commandsEnqueue;
 
+    private final ComponentContext componentContext;
     private final ComponentStateSupplier<S> stateResolver;
     private final BiFunction<ComponentContext, S, ComponentContext> contextResolver;
     private final ComponentMountedCallback<S> componentMountedCallback;
@@ -45,14 +44,31 @@ public class Component<S> implements Segment, StateUpdate<S> {
 
     private final List<DomEventEntry> domEventEntries = new ArrayList<>();
     private final List<ComponentEventEntry> componentEventEntries = new ArrayList<>();
+
     private final Map<Ref, TreePositionPath> refs = new HashMap<>();
     private final List<Component<?>> children = new ArrayList<>();
     private final List<Node> rootNodes = new ArrayList<>();
 
     private TreePositionPath startNodeDomPath;
 
+    /**
+     * This component's current state
+     */
     private S state;
 
+    /**
+     * Creates a new instance of a component. To be called in a relevant component's definition class.
+     * @see rsp.component.definitions.StatefulComponentDefinition<S>
+     *
+     * @param componentId an identity of this component, an object to be used as a key to store and retrieve a current state snapshot
+     * @param stateResolver a function to resolve an initial state
+     * @param contextResolver a function that build a context object that is propagated to descendant components
+     * @param componentView contains DOM subtree definition.
+     * @param callbacks a bundle of this component's life cycle events callbacks
+     * @param renderContextFactory a factory for a render context for children components
+     * @param componentContext a context object from ascendant components
+     * @param commandsEnqueue a consumer for the page's control loop commands
+     */
     public Component(final ComponentCompositeKey componentId,
                      final ComponentStateSupplier<S> stateResolver,
                      final BiFunction<ComponentContext, S, ComponentContext> contextResolver,
@@ -60,7 +76,7 @@ public class Component<S> implements Segment, StateUpdate<S> {
                      final ComponentCallbacks<S> callbacks,
                      final RenderContextFactory renderContextFactory,
                      final ComponentContext componentContext,
-                     final Consumer<SessionEvent> commandsEnqueue) {
+                     final Consumer<Command> commandsEnqueue) {
         this.componentId = Objects.requireNonNull(componentId);
         this.stateResolver = Objects.requireNonNull(stateResolver);
         this.contextResolver = Objects.requireNonNull(contextResolver);
@@ -72,9 +88,13 @@ public class Component<S> implements Segment, StateUpdate<S> {
         this.componentContext = Objects.requireNonNull(componentContext);
         this.commandsEnqueue = Objects.requireNonNull(commandsEnqueue);
 
-        logger.log(TRACE, () -> "New component is created with key " + this);
+        logger.log(TRACE, () -> "New component is created: " + this);
     }
 
+    /**
+     * A path representing a position of this component in the components tree
+     * @return a path in the page's components tree
+     */
     public TreePositionPath path() {
         return componentId.componentPath();
     }
@@ -88,7 +108,7 @@ public class Component<S> implements Segment, StateUpdate<S> {
     }
 
     public Node getLastRootNode() {
-        return rootNodes.get(rootNodes.size() - 1);
+        return rootNodes.isEmpty() ? null : rootNodes.getLast();
     }
 
     public void setStartNodeDomPath(final TreePositionPath domPath) {
@@ -127,7 +147,7 @@ public class Component<S> implements Segment, StateUpdate<S> {
     }
 
     @Override
-    public void setState(S newState) {
+    public void setState(final S newState) {
         applyStateTransformation(_ -> newState);
     }
 
@@ -142,7 +162,7 @@ public class Component<S> implements Segment, StateUpdate<S> {
     }
 
     @Override
-    public void applyStateTransformation(UnaryOperator<S> newStateFunction) {
+    public void applyStateTransformation(final UnaryOperator<S> newStateFunction) {
         final S newState = newStateFunction.apply(state);
 
         if (!onBeforeUpdated(newState)) {
@@ -183,7 +203,6 @@ public class Component<S> implements Segment, StateUpdate<S> {
         commandsEnqueue.accept(new RemoteCommand.ModifyDom(domChangePerformer.commands));
 
         // Unregister events
-        final List<DomEventEntry> eventsToRemove = new ArrayList<>();
         final Set<DomEventEntry> newEvents = new HashSet<>(recursiveDomEvents());
         for (final DomEventEntry event : oldEvents) {
             if (!newEvents.contains(event)
@@ -193,11 +212,11 @@ public class Component<S> implements Segment, StateUpdate<S> {
             }
         }
 
-        // Register new event types on client
+        // Register new events on client-side
         final List<DomEventEntry> eventsToAdd = new ArrayList<>();
         for (final DomEventEntry event : newEvents) {
-            if (!oldEvents.contains(event) && event instanceof DomEventEntry domEventEntry) {
-                eventsToAdd.add(domEventEntry);
+            if (!oldEvents.contains(event)) {
+                eventsToAdd.add(event);
             }
         }
         if (!eventsToAdd.isEmpty()) {
@@ -211,29 +230,29 @@ public class Component<S> implements Segment, StateUpdate<S> {
                 child.unmount();
             }
         }
-        onAfterUpdated(oldState, state);
 
+        onAfterUpdated(oldState, state);
     }
 
     protected void onBeforeInitiallyRendered() {
     }
 
-    protected void onAfterMounted(S state) {
+    protected void onAfterMounted(final S state) {
         componentMountedCallback.onComponentMounted(componentId, state, new EnqueueTaskStateUpdate());
     }
 
-    protected void onAfterRendered(S state) {
+    protected void onAfterRendered(final S state) {
     }
 
-    protected boolean onBeforeUpdated(S state) {
+    protected boolean onBeforeUpdated(final S state) {
         return true;
     }
 
-    protected void onAfterUpdated(S oldState, S state) {
+    protected void onAfterUpdated(final S oldState, final S state) {
         componentUpdatedCallback.onComponentUpdated(componentId, oldState, state, new EnqueueTaskStateUpdate());
     }
 
-    protected void onAfterUnmounted(ComponentCompositeKey key, S oldState) {
+    protected void onAfterUnmounted(final ComponentCompositeKey key, final S oldState) {
         componentUnmountedCallback.onComponentUnmounted(componentId, state);
     }
 
@@ -244,7 +263,6 @@ public class Component<S> implements Segment, StateUpdate<S> {
     public void unmount() {
         recursiveChildren().forEach(c -> c.unmount());
         onAfterUnmounted(componentId, state);
-
     }
 
     private List<Node> rootNodes() {
@@ -329,7 +347,7 @@ public class Component<S> implements Segment, StateUpdate<S> {
     }
 
     @Override
-    public boolean equals(Object o) {
+    public boolean equals(final Object o) {
         if (this == o) return true;
         if (o == null || getClass() != o.getClass()) return false;
         Component<?> component = (Component<?>) o;
@@ -343,28 +361,28 @@ public class Component<S> implements Segment, StateUpdate<S> {
 
     private final class EnqueueTaskStateUpdate implements StateUpdate<S> {
         @Override
-        public void setState(S newState) {
+        public void setState(final S newState) {
             commandsEnqueue.accept(new GenericTaskEvent(() -> {
                 Component.this.setState(newState);
             }));
         }
 
         @Override
-        public void setStateWhenComplete(S newState) {
+        public void setStateWhenComplete(final S newState) {
             commandsEnqueue.accept(new GenericTaskEvent(() -> {
                 Component.this.setStateWhenComplete(newState);
             }));
         }
 
         @Override
-        public void applyStateTransformation(UnaryOperator<S> stateTransformer) {
+        public void applyStateTransformation(final UnaryOperator<S> stateTransformer) {
             commandsEnqueue.accept(new GenericTaskEvent(() -> {
                 Component.this.applyStateTransformation(stateTransformer);
             }));
         }
 
         @Override
-        public void applyStateTransformationIfPresent(Function<S, Optional<S>> stateTransformer) {
+        public void applyStateTransformationIfPresent(final Function<S, Optional<S>> stateTransformer) {
             commandsEnqueue.accept(new GenericTaskEvent(() -> {
                 Component.this.applyStateTransformationIfPresent(stateTransformer);
             }));
